fix too long name welcome message

--- a/packages/scandipwa/src/component/Header/Header.style.scss
+++ b/packages/scandipwa/src/component/Header/Header.style.scss
@@ -320,6 +320,10 @@
         font-size: 14px;
         margin-inline-end: 16px;
         text-align: end;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        max-width: 200px;
 
         @include wide-desktop {
             display: block;
